Fix alignment issue of image in "hero" class

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a {
     justify-content: space-around;
     padding: 90px 150px;
     gap: 60px;
+    align-items: center;
 }
 
 h2 {
